--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
-<body>
+	<body>
+		<h1>My First Heading</h1>
 
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
-
-</body>
+		<p>Morgan & Hongbee are writting code</p>
+	</body>
 </html>
-
