--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 	<body>
 		<h1>My First Heading</h1>
 
-		<p>Morgan & Hongbee are writting code</p>
+		<p>Morgan & Hongbee are writting code with teaching also</p>
 	</body>
 </html>
