--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
 		<h1>My First Heading</h1>
 
 		<p>Morgan & Hongbee are writting code with teaching also</p>
+        <button onclick="sayHello()">Say Hello</button>
+        <script src="sayHello.js" type="text/javascript"></script>
 	</body>
 </html>
