--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>My First Web Page</title>
+        <link rel="stylesheet" type="text/css" href="index.css" />
+    </head>
 	<body>
 		<h1>My First Heading</h1>
 
