--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 	</head>
 	<body>
 		<div id="entryContainer">
-			<image id="entryImage" src="./assets/entry.png" alt="entry" />
 			<button id="getStartedButton" onclick="getStarted()">
 				<em>Get Started</em
 				><svg
@@ -32,6 +31,9 @@
 					/>
 				</svg>
 			</button>
+		</div>
+		<div id="howToContainer">
+			<image id="howTo" src="./assets/page_howto.png" alt="entry" />
 		</div>
 		<div id="paletteContainer">
 			<img
